# timesaver

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Formula/: timesaver.rb
tests/: __init__.py  conftest.py  test_blocker.py  test_config.py  test_daemon.py  test_main.py  test_module_entry.py  test_notifier.py  test_presets.py  test_scheduler.py
timesaver/: __init__.py  __main__.py  blocker.py  config.py  daemon.py  main.py  notifier.py  presets.py  scheduler.py
