[project]
name = "timesaver"
version = "0.1.0"
description = "macOS Website Blocker - Block distracting websites on a schedule"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
]

[project.scripts]
timesaver = "timesaver.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["timesaver"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
